syntax = "proto3";

package user;

option go_package = "github.com/kanevidzro/gokernel/proto/user;user";

service UserService {
  rpc GetUser (GetUserRequest) returns (UserResponse);
}

message GetUserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string role = 3;
}
